@@ -767,11 +767,11 @@ class TestDeleteFormSubmission(TestCase, WagtailTestUtils):
         self.assertTrue(self.client.login(username='siteeditor', password='password'))
         self.form_page = Page.objects.get(url_path='/home/contact-us/')
 
-    def test_delete_submission_show_cofirmation(self):
+    def test_delete_submission_show_confirmation(self):
         response = self.client.get(reverse(
-            'wagtailforms:delete_submission',
-            args=(self.form_page.id, FormSubmission.objects.first().id)
-        ))
+            'wagtailforms:delete_submissions',
+            args=(self.form_page.id, )
+        ) + '?selected-submissions={}'.format(FormSubmission.objects.first().id))
         # Check show confirm page when HTTP method is GET
         self.assertTemplateUsed(response, 'wagtailforms/confirm_delete.html')
 
@@ -780,12 +780,23 @@ class TestDeleteFormSubmission(TestCase, WagtailTestUtils):
 
     def test_delete_submission_with_permissions(self):
         response = self.client.post(reverse(
-            'wagtailforms:delete_submission',
-            args=(self.form_page.id, FormSubmission.objects.first().id)
-        ))
+            'wagtailforms:delete_submissions',
+            args=(self.form_page.id, )
+        ) + '?selected-submissions={}'.format(FormSubmission.objects.first().id))
 
         # Check that the submission is gone
         self.assertEqual(FormSubmission.objects.count(), 1)
+        # Should be redirected to list of submissions
+        self.assertRedirects(response, reverse("wagtailforms:list_submissions", args=(self.form_page.id,)))
+
+    def test_delete_multiple_submissions_with_permissions(self):
+        response = self.client.post(reverse(
+            'wagtailforms:delete_submissions',
+            args=(self.form_page.id, )
+        ) + '?selected-submissions={}&selected-submissions={}'.format(FormSubmission.objects.first().id, FormSubmission.objects.last().id))
+
+        # Check that both submissions are gone
+        self.assertEqual(FormSubmission.objects.count(), 0)
         # Should be redirected to list of submissions
         self.assertRedirects(response, reverse("wagtailforms:list_submissions", args=(self.form_page.id,)))
 
@@ -793,9 +804,9 @@ class TestDeleteFormSubmission(TestCase, WagtailTestUtils):
         self.assertTrue(self.client.login(username="eventeditor", password="password"))
 
         response = self.client.post(reverse(
-            'wagtailforms:delete_submission',
-            args=(self.form_page.id, FormSubmission.objects.first().id)
-        ))
+            'wagtailforms:delete_submissions',
+            args=(self.form_page.id, )
+        ) + '?selected-submissions={}'.format(FormSubmission.objects.first().id))
 
         # Check that the user received a 403 response
         self.assertEqual(response.status_code, 403)
@@ -810,9 +821,9 @@ class TestDeleteFormSubmission(TestCase, WagtailTestUtils):
 
         with self.register_hook('filter_form_submissions_for_user', construct_forms_for_user):
             response = self.client.post(reverse(
-                'wagtailforms:delete_submission',
-                args=(self.form_page.id, FormSubmission.objects.first().id)
-            ))
+                'wagtailforms:delete_submissions',
+                args=(self.form_page.id, )
+            ) + '?selected-submissions={}'.format(FormSubmission.objects.first().id))
 
         # An user can't delete a from submission with the hook
         self.assertEqual(response.status_code, 403)
@@ -820,9 +831,9 @@ class TestDeleteFormSubmission(TestCase, WagtailTestUtils):
 
         # An user can delete a form submission without the hook
         response = self.client.post(reverse(
-            'wagtailforms:delete_submission',
-            args=(self.form_page.id, FormSubmission.objects.first().id)
-        ))
+            'wagtailforms:delete_submissions',
+            args=(self.form_page.id, )
+        ) + '?selected-submissions={}'.format(CustomFormPageSubmission.objects.first().id))
         self.assertEqual(FormSubmission.objects.count(), 1)
         self.assertRedirects(response, reverse("wagtailforms:list_submissions", args=(self.form_page.id,)))
 
@@ -834,11 +845,12 @@ class TestDeleteCustomFormSubmission(TestCase):
         self.assertTrue(self.client.login(username='siteeditor', password='password'))
         self.form_page = Page.objects.get(url_path='/home/contact-us-one-more-time/')
 
-    def test_delete_submission_show_cofirmation(self):
+    def test_delete_submission_show_confirmation(self):
         response = self.client.get(reverse(
-            'wagtailforms:delete_submission',
-            args=(self.form_page.id, CustomFormPageSubmission.objects.first().id)
-        ))
+            'wagtailforms:delete_submissions',
+            args=(self.form_page.id, )
+        ) + '?selected-submissions={}'.format(CustomFormPageSubmission.objects.first().id))
+
         # Check show confirm page when HTTP method is GET
         self.assertTemplateUsed(response, 'wagtailforms/confirm_delete.html')
 
@@ -847,22 +859,33 @@ class TestDeleteCustomFormSubmission(TestCase):
 
     def test_delete_submission_with_permissions(self):
         response = self.client.post(reverse(
-            'wagtailforms:delete_submission',
-            args=(self.form_page.id, CustomFormPageSubmission.objects.first().id)
-        ))
+            'wagtailforms:delete_submissions',
+            args=(self.form_page.id, )
+        ) + '?selected-submissions={}'.format(CustomFormPageSubmission.objects.first().id))
 
         # Check that the submission is gone
         self.assertEqual(CustomFormPageSubmission.objects.count(), 1)
         # Should be redirected to list of submissions
         self.assertRedirects(response, reverse("wagtailforms:list_submissions", args=(self.form_page.id, )))
 
+    def test_delete_multiple_submissions_with_permissions(self):
+        response = self.client.post(reverse(
+            'wagtailforms:delete_submissions',
+            args=(self.form_page.id, )
+        ) + '?selected-submissions={}&selected-submissions={}'.format(CustomFormPageSubmission.objects.first().id, CustomFormPageSubmission.objects.last().id))
+
+        # Check that both submissions are gone
+        self.assertEqual(CustomFormPageSubmission.objects.count(), 0)
+        # Should be redirected to list of submissions
+        self.assertRedirects(response, reverse("wagtailforms:list_submissions", args=(self.form_page.id,)))
+
     def test_delete_submission_bad_permissions(self):
         self.assertTrue(self.client.login(username="eventeditor", password="password"))
 
         response = self.client.post(reverse(
-            'wagtailforms:delete_submission',
-            args=(self.form_page.id, CustomFormPageSubmission.objects.first().id)
-        ))
+            'wagtailforms:delete_submissions',
+            args=(self.form_page.id, )
+        ) + '?selected-submissions={}'.format(CustomFormPageSubmission.objects.first().id))
 
         # Check that the user received a 403 response
         self.assertEqual(response.status_code, 403)
