@@ -7,5 +7,5 @@ from wagtail.wagtailforms import views
 urlpatterns = [
     url(r'^$', views.index, name='index'),
     url(r'^submissions/(\d+)/$', views.list_submissions, name='list_submissions'),
-    url(r'^submissions/(\d+)/(\d+)/delete/$', views.delete_submission, name='delete_submission')
+    url(r'^submissions/(\d+)/delete/$', views.delete_submissions, name='delete_submissions')
 ]
